# digital-huarongdao

./: .gitignore  LICENSE  README.md  blogHomework.md  prototyping.rp  ss.md  test.py  结对.md
ai/: .eslintrc.js  answerQuestions.py  draw.py  package.json  requirements.txt  test.py  test.txt  testAPI.py  testFail.py  tsconfig.json
ai/image/: main_image.py
ai/lib/: index.d.ts  index.js  index.js.map
ai/src/: index.ts
ai/test/: test.js  test.ts
ai/util/: get_swaps.py  http_api.py
game/: .rsw.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  webpack.config.js
game/src/: App.tsx  app.tsx  index.ejs  index.tsx  main.tsx
game/src/components/: gameBase.tsx  info.tsx  myDialog.tsx
game/src/style/: game.scss  home.scss  index.scss  record.scss  tip.scss
game/src/style/game/: gameBase.scss  info.scss  myDialog.scss
game/src/util/: config.ts  gameData.ts  image.ts  index.ts  prompt.ts  store.ts  wasm.ts
game/src/view/: game.tsx  home.tsx  record.tsx  tip.tsx
game/wasm/: Cargo.toml
game/wasm/src/: lib.rs  queue_item.rs
game/wasm/src/array/: mod.rs
game/wasm/src/string/: mod.rs  queue_item.rs
image/: image.py  main_image.py
util/: compare.py  get_swaps.py
